fixed Meateater layout bugs

--- a/UI/components/ChallengesAndSolutions/styles/fusion-markets.scss
+++ b/UI/components/ChallengesAndSolutions/styles/fusion-markets.scss
@@ -22,6 +22,10 @@
       max-width: 380px;
       margin: 0 0 16px;
 
+      p {
+        margin-bottom: 0;
+      }
+
       &-2,
       &-4 {
         margin-left: auto;
